test/resources/parser/failing/zomtest3.scala
object InvalidQualifier {
  val x: Module..List = Nil()
}